--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <div> Hola :/ </div>
+   
+    <div style="background-color: red;">
+     HOLA
+    </div>
+
+    <span style="background-color:green;">
+        MUNDO
+    </span>
     
 </body>
 </html>
