--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EjerciciosHTMLSEMANTICO</title> 
 </head>
 <body>
-   
-    <div style="background-color: red;">
-     HOLA
-    </div>
-
-    <span style="background-color:green;">
-        MUNDO
-    </span>
-    
+    <header>
+        <h1> PRACTICA SEMANTICA</h1>
+    </header>
+    <main>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, doloremque fuga! Dolore repellendus pariatur, soluta id dolores cumque velit accusantium, voluptatum dignissimos facilis sunt porro, iste eveniet beatae. Exercitationem, temporibus!</p>
+    </main>
+    <footer>
+        <p>ACA VENDRAN DERECHOS DE AUTOR</p>
+    </footer>        
 </body>
 </html>
