--- a/ElementosSemanticosSTREEP FOOD.html
+++ b/ElementosSemanticosSTREEP FOOD.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h1> STREEP FOOD FRUITS</h1>
+    <h1> STREETss FOOD FRUITS</h1>
     <h2 style="font-size: 2em; font-weight: bold;">¡Opciones de alimentos saludables y asequibles!</h2>
     <br>
     <p>
@@ -26,7 +26,6 @@
         La disponibilidad de frutas en la calle facilita <br>
         el cumplimiento de estas recomendaciones.
     </p>
-    <hr>
     <p> ¡Sabor y frescura! </p>
     <hr>
     <div class = "wbo">
@@ -76,7 +75,7 @@
     <div>  
     </div class= "abreviaturas (abbr)"> 
     <p>
-        Forma accesible y deliciosa <abbr title="">ohh lala</abbr>
+        Forma accesible y deliciosa <abbr title="ohhhh  ">ohh lala</abbr>
     </p>
 
     <div>  
