--- a/SCSSEJEMPLO/SCS.HTML
+++ b/SCSSEJEMPLO/SCS.HTML
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estiloclases.css">
 </head>
 <body>
+    <p> hola</p>
     <div class= "cajas" ></div>
 </body>
 </html>
