--- a/CSSEJEMPLO/SCS.HTML
+++ b/CSSEJEMPLO/SCS.HTML
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="estiloclases.css">
 </head>
 <body>
-    <p> hola</p>
+    <p> hola x</p>
     <div class= "cajas" ></div>
+    <br>
+    <div class= "color1" ></div>
+    <div class= "color2" ></div>
+    <div class= "color3" ></div>
+    <div class= "color4" ></div>
+    <br>
+    <br>
+    <div class= "color5" ></div>
+
 </body>
 </html>
