--- a/ManualesHtml/manualhtml.html
+++ b/ManualesHtml/manualhtml.html
@@ -11,7 +11,7 @@
     <main style="background-color: white;">
         <div>
 
-            <table border="1" style=" width: 100%">
+            <table border="1" style=" width: 100%; background-color: pink">
                 <!-- Utilizamos el atributo border para agregar bordes a la tabla (opcional) -->
                 <caption style="background-color: black; color: white;">Manual HTML</caption>
                 <thead>
@@ -23,8 +23,7 @@
                     </tr>
 
                 </thead>
-                <tbody>
-
+                <tbody>        
                     <tr><!-- div -->
                         <td>&lt;div&gt;</td> <!-- Celda de la primera columna -->
                         <td>Sirve para crear secciones o agrupar contenidos en bloque.</td>
@@ -32,7 +31,7 @@
                         <td> <!-- Celda de la tercera columna -->
                             <code>
                                 &lt;div&gt;<br>
-                                &nbsp;&nbsp;&lt;p&gt; Nombre de Pagina &lt;/p&gt;<br>
+                                &nbsp;&nbsp;&lt;p&gt; Titulo del ensayo &lt;/p&gt;<br>
                                 &lt;/div&gt;
                             </code>
                         </td>
@@ -47,7 +46,7 @@
                         <td> <!-- Celda de la tercera columna -->
                             <code>
                                 &lt;span&gt;<br>
-                                &nbsp;&nbsp; HOLA COMO ESTAS <br>
+                                &nbsp;&nbsp; Soy un gatito<br>
                                 &lt;/span&gt;
                             </code>
                         </td>
