--- a/ManualesHtml/manualhtml.html
+++ b/ManualesHtml/manualhtml.html
@@ -21,10 +21,10 @@
                 <!-- Utilizamos el atributo border para agregar bordes a la tabla (opcional) -->
                 <caption style="background-color: #662549; color: white;">Manual HTML</caption>
                 <thead>
-                    <tr>
-                        <th>Elemento </th> <!-- Encabezado de la primera columna -->
-                        <th>Descripcion</th> <!-- Encabezado de la segunda columna -->
-                        <th>Link</th> <!-- Encabezado de la tercera columna -->
+                    <tr style="background-color: #D2E0FB;color: black;">
+                        <th>ELEMENTO </th> <!-- Encabezado de la primera columna -->
+                        <th>DESCRIPCION</th> <!-- Encabezado de la segunda columna -->
+                        <th>LINK</th> <!-- Encabezado de la tercera columna -->
                     </tr>
 
                 </thead>
@@ -858,7 +858,6 @@
                     <tr><!-- td -->
                         <td>&lt;td&gt;</td> <!-- Celda de la primera columna -->
                         <td>Define una celda de una tabla que contiene datos. Participa en el modelo de mesa .
-                
                         </td>
                         <td><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/td" target="_blank">Link</a>
                         </td>
