--- a/ManualesHtml/manualhtml.html
+++ b/ManualesHtml/manualhtml.html
@@ -21,7 +21,7 @@
                 <!-- Utilizamos el atributo border para agregar bordes a la tabla (opcional) -->
                 <caption style="background-color: #662549; color: white;">Manual HTML</caption>
                 <thead>
-                    <tr style="background-color: #D2E0FB;color: black;">
+                    <tr style="background-color: #F39F5A;color: black;">
                         <th>ELEMENTO </th> <!-- Encabezado de la primera columna -->
                         <th>DESCRIPCION</th> <!-- Encabezado de la segunda columna -->
                         <th>LINK</th> <!-- Encabezado de la tercera columna -->
